--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "milon/barcode": "^10.0"
+        "milon/barcode": "^10.0",
+        "picqer/php-barcode-generator": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
