--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/socialite": "^5.8",
         "laravel/tinker": "^2.7",
         "milon/barcode": "^10.0",
-        "picqer/php-barcode-generator": "^2.3"
+        "picqer/php-barcode-generator": "^2.3",
+        "stripe/stripe-php": "^12.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
